// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridFlow renders 0 1`] = `
Array [
  .c0 {
  grid-flow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders function 1`] = `
Array [
  .c0 {
  grid-flow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-flow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders negative number 1`] = `
Array [
  .c0 {
  grid-flow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-flow: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-flow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-flow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-flow: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-flow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-flow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-flow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-flow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-flow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-flow: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-flow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-flow: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-flow: July;
}

@media May {
  .c0 {
    grid-flow: August;
  }
}

@media April {
  .c0 {
    grid-flow: September;
  }
}

@media January {
  .c0 {
    grid-flow: November;
  }
}

@media April {
  .c0 {
    grid-flow: August;
  }
}

@media June {
  .c0 {
    grid-flow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: July;
}

@media May {
  .c0 {
    grid-flow: August;
  }
}

@media April {
  .c0 {
    grid-flow: September;
  }
}

@media January {
  .c0 {
    grid-flow: November;
  }
}

@media April {
  .c0 {
    grid-flow: August;
  }
}

@media June {
  .c0 {
    grid-flow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-flow: November;
  }
}

@media April {
  .c0 {
    grid-flow: January;
  }
}

@media January {
  .c0 {
    grid-flow: December;
  }
}

@media April {
  .c0 {
    grid-flow: April;
  }
}

@media June {
  .c0 {
    grid-flow: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-flow: November;
  }
}

@media April {
  .c0 {
    grid-flow: January;
  }
}

@media January {
  .c0 {
    grid-flow: December;
  }
}

@media April {
  .c0 {
    grid-flow: April;
  }
}

@media June {
  .c0 {
    grid-flow: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-flow: July;
  }
}

@media April {
  .c0 {
    grid-flow: August;
  }
}

@media January {
  .c0 {
    grid-flow: September;
  }
}

@media April {
  .c0 {
    grid-flow: November;
  }
}

@media June {
  .c0 {
    grid-flow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-flow: July;
  }
}

@media April {
  .c0 {
    grid-flow: August;
  }
}

@media January {
  .c0 {
    grid-flow: September;
  }
}

@media April {
  .c0 {
    grid-flow: November;
  }
}

@media June {
  .c0 {
    grid-flow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-flow: January;
  }
}

@media April {
  .c0 {
    grid-flow: December;
  }
}

@media January {
  .c0 {
    grid-flow: April;
  }
}

@media April {
  .c0 {
    grid-flow: May;
  }
}

@media June {
  .c0 {
    grid-flow: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-flow: January;
  }
}

@media April {
  .c0 {
    grid-flow: December;
  }
}

@media January {
  .c0 {
    grid-flow: April;
  }
}

@media April {
  .c0 {
    grid-flow: May;
  }
}

@media June {
  .c0 {
    grid-flow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders postitive number 1`] = `
Array [
  .c0 {
  grid-flow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders string 1`] = `
Array [
  .c0 {
  grid-flow: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridFlow renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridFlow renders valid theme path 1`] = `
Array [
  .c0 {
  grid-flow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-flow: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
